# neuraltwin

./: .gitignore  README.md  pyproject.toml  report_for_Smith_Ltd.html
src/classification/: agent.ipynb  best_model.joblib  best_model_redesigned.joblib  run_simulation.ipynb
src/data_generation/: pyproject.toml  requirements.txt  utils.py
src/data_generation/wagon_data_generation/: README.md  fleet_manager.py  main.py  wagon.py  wagon_simulator.py
