[project]
name = "neuraltwin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "db-dtypes>=1.4.3",
    "faker>=37.5.3",
    "google-cloud-bigquery>=3.36.0",
    "google-cloud-storage>=3.3.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.7.5",
    "pandas>=2.1.4",
    "pandas-gbq>=0.29.2",
    "pyarrow>=21.0.0",
    "pycaret>=3.3.2",
    "reportlab>=4.4.3",
    "ruff>=0.12.11",
]
